--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ __pycache__/
 *.jsonl
 .DS_Store
 .gitignore
-*.pkl
 
 data/img/
 
@@ -142,3 +141,6 @@ dmypy.json
 # Data
 pickled_data
 *.npy
+
+# Model
+*.h5
